--- a/.github/workflows/sdk-gen.yml
+++ b/.github/workflows/sdk-gen.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - 'develop'
+      - 'sdk-generation'
     paths:
       - '**indexer.oas2.json'
 name: "Sdk Generation"
