--- a/.github/actions/sdk-codegen/sdk-gen.yml
+++ b/.github/actions/sdk-codegen/sdk-gen.yml
@@ -1,4 +1,4 @@
-name: "Sdk Generation"
+name: "sdk-gen"
 description: "Uses models to run SDK code generation and cut a PR in case of changes."
 inputs:
   sdk:
