--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -13,3 +13,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Generate and PR
         uses: ./.github/actions/sdk-codegen/
+        with:
+          sdk: ALL
