update token args

--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -15,3 +15,5 @@ jobs:
         uses: ./.github/actions/sdk-codegen/
         with:
           args: "-k ALL"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
