--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -5,6 +5,9 @@ on:
       - 'sdk-generation'
     paths:
       - '**indexer.oas2.json'
+permissions:
+  contents: read
+  pull-requests: write
 jobs:
   generate_and_pr:
     runs-on: ubuntu-latest
